added linked photos and paragraph

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 					<li>ფოტოები</li>
 				</ul>
 			</nav>
+			<section>
+				<h1>Front End Development</h1>
+				<a href="https://smartacademy.ge/" target="_blank">
+					<img class="htmlphoto" src="image/html-photo.jpg" alt="image/html-photo">
+				</a>
+				<a href="https://smartacademy.ge/" target="_blank">
+					<img class="laptop" src="image/laptop.jpg" alt="/imagelaptop">
+				</a>
+				<p>ციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების თეორიული ნაწილი და პრაქტიკული მაგალითების დახმარებით გაიაზროს როგორციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების თეორიული ნაწილი და პრაქტიკული მაგალითების დახმარებით გაიაზროს როგორციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების კურსის მიზანია</p>
+			</section>
 	</header>
 </body>
 </html>
