correct bottom border

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 					<img class="laptop" src="image/laptop.jpg" alt="/imagelaptop">
 				</a>
 				<p>ციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების თეორიული ნაწილი და პრაქტიკული მაგალითების დახმარებით გაიაზროს როგორციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების თეორიული ნაწილი და პრაქტიკული მაგალითების დახმარებით გაიაზროს როგორციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების კურსის მიზანია</p>
+				<a href="https://smartacademy.ge/" target="_blank">
+					<span>დეტალურად =></span>
+				</a>
 			</section>
 	</header>
 </body>
