--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<header>
+		<div class="navigation">
 			<nav>
 				<ul>
 					<a href="index.html">
@@ -17,19 +18,30 @@
 					<li>ფოტოები</li>
 				</ul>
 			</nav>
+		</div>
 			<section>
-				<h1>Front End Development</h1>
-				<a href="https://smartacademy.ge/" target="_blank">
-					<img class="htmlphoto" src="image/html-photo.jpg" alt="image/html-photo">
-				</a>
-				<a href="https://smartacademy.ge/" target="_blank">
-					<img class="laptop" src="image/laptop.jpg" alt="/imagelaptop">
-				</a>
-				<p>ციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების თეორიული ნაწილი და პრაქტიკული მაგალითების დახმარებით გაიაზროს როგორციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების თეორიული ნაწილი და პრაქტიკული მაგალითების დახმარებით გაიაზროს როგორციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების კურსის მიზანია</p>
-				<a href="https://smartacademy.ge/" target="_blank">
-					<span>დეტალურად =></span>
-				</a>
+				<div class="description">
+					<h1>Front End Development</h1>
+					<a href="https://smartacademy.ge/" target="_blank">
+						<img class="htmlphoto" src="image/html-photo.jpg" alt="image/html-photo">
+					</a>
+					<a href="https://smartacademy.ge/" target="_blank">
+						<img class="laptop" src="image/laptop.jpg" alt="/imagelaptop">
+					</a>
+					<p>ციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების თეორიული ნაწილი და პრაქტიკული მაგალითების დახმარებით გაიაზროს როგორციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების თეორიული ნაწილი და პრაქტიკული მაგალითების დახმარებით გაიაზროს როგორციფრული პროდუქტების ტესტირების კურსის მიზანია სტუდენტმა შეისწავლოს ციფრული პროდუქტების ტესტირების კურსის მიზანია</p>
+					<a href="https://smartacademy.ge/" target="_blank">
+						<span class="detalurad">დეტალურად =></span>
+					</a>
+				</div>
 			</section>
 	</header>
+	<footer>
+		<div class="contact">
+			<span class="telefoni">+995 555 555 555</span>
+			<a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
+				<span class="imeili"> info@test.ge</span>
+			</a>
+		</div>
+	</footer>
 </body>
 </html>
